files rearranged and progress made

--- a/questions/question3.html
+++ b/questions/question3.html
@@ -16,12 +16,15 @@
         <div class="timer">10</div>
         <!-- Question container -->
         <section class="quiz-container">
-            <span class="quiz1">
-                <div class="question">Lets get started. <br>Which is the highest waterfall in the world?</div>
-                <div class="answer">Angel falls</div>
-                <div class="answer">Victoria falls</div>
-                <div class="answer">Niagara falls</div>
-                <div class="next">Next</div>
+            <span class="quiz2">
+                <div class="question" style="background: url(../assets/img/test3_img.jpg) no-repeat; background-size: 100% 100%;">In which year was Martin Luther King Junior born?</div>
+                <div class="answer">1929</div>
+                <div class="answer">1915</div>
+                <div class="answer">1945</div>
+                <div class="next">
+                    <a href="#">Previous</a>
+                    <a href="#">Next</a>
+                </div>
             </span>
         </section>
     </div>
