adding some functionality, work in progress

--- a/questions/question4.html
+++ b/questions/question4.html
@@ -6,29 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smarty Exercise</title>
     <link rel="stylesheet" href="questions.css">
+    <link rel="stylesheet" href="../assets/css/all.min.css">
+    <link rel="stylesheet" href="../assets/css/fontawesome.min.css">
 </head>
 <body>
     
     <div class="container">
         <!-- Intro Header -->
-        <h2 class="intro">Time to test your IQ Level,<br>by answering in 10s!</h2>
+        <h2 class="intro">And here we are!<br>4 of 4</h2>
         <!-- Timer -->
-        <div class="timer">10</div>
+        <div class="timer"></div>
         <!-- Question container -->
         <section class="quiz-container">
-            <span class="quiz2">
+            <span class="quiz4">
                 <div class="question" style="background: url(../assets/img/test4_img.jpg) no-repeat; background-size: 100% 100%;">What is the meaning of this idiomatic expression "strain credulity"?</div>
                 <div class="answer">To think too hard</div>
                 <div class="answer">Hard to believe</div>
                 <div class="answer">Run at a very fast speed</div>
                 <div class="next">
-                    <a href="#">Previous</a>
-                    <a href="#">Next</a>
+                    <a href="#"><i class="fa-solid fa-angles-left"></i></a>
                 </div>
             </span>
         </section>
     </div>
 
-    <script src="smarty.js"></script>
+    <script src="../smarty.js"></script>
 </body>
 </html>
