--- a/questions/question1.html
+++ b/questions/question1.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smarty Exercise</title>
     <link rel="stylesheet" href="questions.css">
+    <link rel="stylesheet" href="../assets/css/all.min.css">
+    <link rel="stylesheet" href="../assets/css/fontawesome.min.css">
 </head>
 <body>
     
     <div class="container">
         <!-- Intro Header -->
-        <h2 class="intro">Time to test your IQ Level,<br>by answering in 10s!</h2>
+        <h2 class="intro">Let's get started.<br>1 of 4</h2>
         <!-- Timer -->
-        <div class="timer">10</div>
+        <div class="timer"></div>
         <!-- Question container -->
         <section class="quiz-container">
             <span class="quiz1">
@@ -21,11 +23,13 @@
                 <div class="answer">Angel falls</div>
                 <div class="answer">Victoria falls</div>
                 <div class="answer">Niagara falls</div>
-                <div class="next"><a href="#">Next</a></div>
+                <div class="next">
+                    <a href="#"><i class="fa-solid fa-angles-right"></i></a>
+                </div>
             </span>
         </section>
     </div>
 
-    <script src="smarty.js"></script>
+    <script src="../smarty.js"></script>
 </body>
 </html>
