--- a/questions/question2.html
+++ b/questions/question2.html
@@ -6,14 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Smarty Exercise</title>
     <link rel="stylesheet" href="questions.css">
+    <link rel="stylesheet" href="../assets/css/all.min.css">
+    <link rel="stylesheet" href="../assets/css/fontawesome.min.css">
 </head>
 <body>
     
     <div class="container">
         <!-- Intro Header -->
-        <h2 class="intro">Time to test your IQ Level,<br>by answering in 10s!</h2>
+        <h2 class="intro">Keep Going!!!.<br>2 of 4</h2>
         <!-- Timer -->
-        <div class="timer">10</div>
+        <div class="timer"></div>
         <!-- Question container -->
         <section class="quiz-container">
             <span class="quiz2">
@@ -22,13 +24,13 @@
                 <div class="answer">Pluto</div>
                 <div class="answer">Uranus</div>
                 <div class="next">
-                    <a href="#">Previous</a>
-                    <a href="#">Next</a>
+                    <a href="#"><i class="fa-solid fa-angles-left"></i></a>
+                    <a href="#"><i class="fa-solid fa-angles-right"></i></a>
                 </div>
             </span>
         </section>
     </div>
 
-    <script src="smarty.js"></script>
+    <script src="../smarty.js"></script>
 </body>
 </html>
