JS been giving a tough time, but work still in progress

--- a/questions/question1.html
+++ b/questions/question1.html
@@ -24,7 +24,7 @@
                 <div class="answer">Victoria falls</div>
                 <div class="answer">Niagara falls</div>
                 <div class="next">
-                    <a href="#"><i class="fa-solid fa-angles-right"></i></a>
+                    <a href="../questions/question2.html"><i class="fa-solid fa-angles-right"></i></a>
                 </div>
             </span>
         </section>
