--- a/questions/question2.html
+++ b/questions/question2.html
@@ -24,8 +24,7 @@
                 <div class="answer">Pluto</div>
                 <div class="answer">Uranus</div>
                 <div class="next">
-                    <a href="#"><i class="fa-solid fa-angles-left"></i></a>
-                    <a href="#"><i class="fa-solid fa-angles-right"></i></a>
+                    <a href="../questions/question3.html"><i class="fa-solid fa-angles-right"></i></a>
                 </div>
             </span>
         </section>
