--- a/questions/question3.html
+++ b/questions/question3.html
@@ -24,13 +24,12 @@
                 <div class="answer">1915</div>
                 <div class="answer">1945</div>
                 <div class="next">
-                    <a href="#"><i class="fa-solid fa-angles-left"></i></a>
-                    <a href="#"><i class="fa-solid fa-angles-right"></i></a>
+                    <a href="../questions/question4.html"><i class="fa-solid fa-angles-right"></i></a>
                 </div>
             </span>
         </section>
     </div>
 
-    <script src="../smarty.js"></script>
+    <!-- <script src="../smarty.js"></script> -->
 </body>
 </html>
