--- a/questions/question4.html
+++ b/questions/question4.html
@@ -30,6 +30,6 @@
         </section>
     </div>
 
-    <script src="../smarty.js"></script>
+    <!-- <script src="../smarty.js"></script> -->
 </body>
 </html>
