good much progress made so far, almost done

--- a/questions/question3.html
+++ b/questions/question3.html
@@ -30,6 +30,6 @@
         </section>
     </div>
 
-    <!-- <script src="../smarty.js"></script> -->
+    <script src="../smarty JS/question3.js"></script>
 </body>
 </html>
