--- a/questions/question4.html
+++ b/questions/question4.html
@@ -24,12 +24,12 @@
                 <div class="answer">Hard to believe</div>
                 <div class="answer">Run at a very fast speed</div>
                 <div class="next">
-                    <a href="#"><i class="fa-solid fa-angles-left"></i></a>
+                    <a href="#">>>End Quiz>></a>
                 </div>
             </span>
         </section>
     </div>
 
-    <!-- <script src="../smarty.js"></script> -->
+    <script src="../smarty JS/question4.js"></script>
 </body>
 </html>
