--- a/questions/question1.html
+++ b/questions/question1.html
@@ -30,6 +30,6 @@
         </section>
     </div>
 
-    <script src="../smarty.js"></script>
+    <script src="../smarty JS/question1.js"></script>
 </body>
 </html>
