--- a/questions/question2.html
+++ b/questions/question2.html
@@ -30,6 +30,6 @@
         </section>
     </div>
 
-    <script src="../smarty.js"></script>
+    <script src="../smarty JS/question2.js"></script>
 </body>
 </html>
