--- a/questions/question3.html
+++ b/questions/question3.html
@@ -30,6 +30,8 @@
         </section>
     </div>
 
+    <h1 class="caution">Oops! <br>Please use screen width lesser than 930px!!!</h1>
+
     <script src="../smarty JS/question3.js"></script>
 </body>
 </html>
