--- a/questions/question4.html
+++ b/questions/question4.html
@@ -24,11 +24,13 @@
                 <div class="answer">Hard to believe</div>
                 <div class="answer">Run at a very fast speed</div>
                 <div class="next">
-                    <a href="#">>>End Quiz>></a>
+                    <a href="../questions/scoreboard/scoreboard.html">>>End Quiz>></a>
                 </div>
             </span>
         </section>
     </div>
+
+    <h1 class="caution">Oops! <br>Please use screen width lesser than 930px!!!</h1>
 
     <script src="../smarty JS/question4.js"></script>
 </body>
