--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
 
         <!-- Start Button -->
-        <a href="/Smarty-Quiz-Game/questions/question1.html" class="start-button">START</a>
+        <a href="/questions/question1.html" class="start-button">START</a>
         
     </div>
 
